--- a/src/main/resources/mails/convocazioneCommissione.html
+++ b/src/main/resources/mails/convocazioneCommissione.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Referee ECM,</p>
+  	<p>Gentile Componente della Commissione ECM,</p>
   	<p>
 	  	Le e' stata assegnata la valutazione della domanda di accreditamento provvisorio del Provider <span th:text="${provider}"></span>.<br/>
 	  	E’ necessario collegarsi all’ <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda entro il termine di 15 giorni.
