Bugfix encoding delle email + aggiunte email

--- a/src/main/resources/mails/alertErroreDiSistema.html
+++ b/src/main/resources/mails/alertErroreDiSistema.html
@@ -7,12 +7,12 @@
   <body>
   	<p>Gentile Segreteria ECM,</p>
   	<p>
-	  	Si e' verificato un errore nel Sistema ECM.<br/>
+	  	Si &egrave; verificato un errore nel Sistema ECM.<br/>
 	  	<span th:text="${message}"></span>
   	</p>
   	<p>Si consiglia di segnalare il problema al fornitore per l'analisi dei log.</p>
     <p>
-      Distinti Saluti, <br />
+      Distinti Saluti<br />
     </p>
   </body>
 </html>
