--- a/src/main/resources/mails/alertScadenzaContributoAnnuo.html
+++ b/src/main/resources/mails/alertScadenzaContributoAnnuo.html
@@ -7,7 +7,7 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 10 giorni i termini  per procedere al pagamento del contributo annuo. Il mancato pagamento del contributo non permetterà di accedere all'Albo dei Provider accreditati e di accedere alle funzionalità di accreditamento degli eventi.
+     La informiamo che scadranno fra 10 giorni i termini  per procedere al pagamento del contributo annuo. Il mancato pagamento del contributo non permetter&agrave; di accedere all'Albo dei Provider accreditati e di accedere alle funzionalit&agrave; di accreditamento degli eventi.
     </p>
     <p>
       Distinti Saluti, <br />
