--- a/src/main/resources/mails/alertScadenzaRelazioneAnnuale.html
+++ b/src/main/resources/mails/alertScadenzaRelazioneAnnuale.html
@@ -7,7 +7,7 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini per procedere all’inserimento della Relazione Annuale.
+     La informiamo che scadranno fra 15 giorni i termini per procedere all'inserimento della Relazione Annuale.
     </p>
     <p>
       Distinti Saluti, <br />
