--- a/src/main/resources/mails/convocazioneCommissione.html
+++ b/src/main/resources/mails/convocazioneCommissione.html
@@ -7,8 +7,8 @@
   <body>
   	<p>Gentile Componente della Commissione ECM,</p>
   	<p>
-	  	E' stata fissata una seduta per la valutazione di domande di accreditamento Provvisorio dei Provider.<br/>
-	  	E' possibile collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per visualizzare le domande che saranno discusse nella prossima seduta.
+	  	&Egrave; stata fissata una seduta per la valutazione di domande di accreditamento Provvisorio dei Provider.<br/>
+	  	&Egrave; possibile collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per visualizzare le domande che saranno discusse nella prossima seduta.
   	</p>
     <p>
       Distinti Saluti, <br />
