--- a/src/main/resources/mails/creazioneAccount.html
+++ b/src/main/resources/mails/creazioneAccount.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-    <p>Complimenti la registrazione al portale ECM e' avvenuta con successo!</p>
+    <p>Complimenti la registrazione al portale ECM &egrave; avvenuta con successo!</p>
     <p>
       Cliccare sul seguente link per attivare il suo account (<b><a th:href="${applicationBaseUrl}">Portale ECM</a></b>)
     </p>
