--- a/src/main/resources/mails/alertScadenzaPFA.html
+++ b/src/main/resources/mails/alertScadenzaPFA.html
@@ -7,7 +7,7 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini per procedere all’inserimento del Piano Formativo Annuale. Il mancato inserimento del Piano Formativo Annuale non permetterà di accreditare eventi provenienti dal Piano Formativo per l’anno prossimo.
+     La informiamo che scadranno fra 15 giorni i termini per procedere all'inserimento del Piano Formativo Annuale. Il mancato inserimento del Piano Formativo Annuale non permetter&agrave; di accreditare eventi provenienti dal Piano Formativo per l'anno prossimo.
     </p>
     <p>
       Distinti Saluti, <br />
