--- a/src/main/resources/mails/alertScadenzaReinvioIntegrazioniAccreditamento.html
+++ b/src/main/resources/mails/alertScadenzaReinvioIntegrazioniAccreditamento.html
@@ -7,7 +7,7 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-      La informiamo che sono in scadenza i termini per procedere all'invio delle integrazioni<span th:if="${isPreavvisoDiRigetto}"> relative al preavviso di rigetto</span> richieste sulla domanda di Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span>. Una volta scaduti i termini, non sarà possibile procedere con la modifica dei dati/documenti.
+     La informiamo che sono in scadenza i termini per procedere all'invio delle integrazioni<span th:if="${isPreavvisoDiRigetto}"> relative al preavviso di rigetto</span> richieste sulla domanda di Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span>. Una volta scaduti i termini, non sar&agrave; possibile procedere con la modifica dei dati/documenti.
     </p>
     <p>
       Distinti Saluti, <br />
