--- a/src/main/resources/mails/alertScadenzaValutazioneReferee.html
+++ b/src/main/resources/mails/alertScadenzaValutazioneReferee.html
@@ -8,7 +8,7 @@
   	<p>Gentile Referee ECM,</p>
   	<p>
 	  	La informiamo che scadranno fra 5 giorni i termini per procedere con la valutazione della domanda del Provider <span th:text="${provider}"></span>.<br/>
-	  	E’ necessario collegarsi all’ <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda.
+	  	&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda.
   	</p>
     <p>
       Distinti Saluti, <br />
