--- a/src/main/resources/mails/assegnaDomandaTeamLeader.html
+++ b/src/main/resources/mails/assegnaDomandaTeamLeader.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <title th:remove="all">Assegna domanda a Referee</title>
+    <title th:remove="all">Assegna domanda a Team Leader</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Referee ECM,</p>
+  	<p>Gentile Team Leader,</p>
   	<p>
-	  	Le &egrave; stata assegnata la valutazione della domanda di accreditamento provvisorio del Provider <span th:text="${provider}"></span>.<br/>
+	  	Le &egrave; stata assegnata la valutazione della domanda di accreditamento standard del Provider <span th:text="${provider}"></span>.<br/>
 	  	&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda entro il termine di 15 giorni.
   	</p>
     <p>
