--- a/src/main/resources/mails/cambioPassword.html
+++ b/src/main/resources/mails/cambioPassword.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-    	Come da sua richiesta e' stata cambiata la password di accesso al <b><a th:href="${applicationBaseUrl}">Sistema ECM</a></b>
+    	Come da sua richiesta &egrave; stata cambiata la password di accesso al <b><a th:href="${applicationBaseUrl}">Sistema ECM</a></b>
     </p>
     <p>Le sue credenziali d'accesso sono: </p>
     <p>username: <span th:text="${username}"></span><br />
