--- a/src/main/resources/mails/notificaSegreteriaMancataValutazioneReferee.html
+++ b/src/main/resources/mails/notificaSegreteriaMancataValutazioneReferee.html
@@ -7,8 +7,8 @@
   <body>
   	<p>Gentile Segreteria ECM,</p>
   	<p>
-	  	Nella domanda del Provider <span th:text="${provider}"></span> sono scaduti i termini per la presentazione di almeno 2 valutazioni su 3 da parte dei Referee a cui la domanda è stata assegnata.<br/>
-		E’ necessario collegarsi all’ <b><a th:href="${applicationBaseUrl}">applicativo</a></b> ed effettuare una nuova assegnazione per la valutazione della domanda ad altri referee.
+	  	Nella domanda del Provider <span th:text="${provider}"></span> sono scaduti i termini per la presentazione di almeno 2 valutazioni su 3 da parte dei Referee a cui la domanda &egrave; stata assegnata.<br/>
+		&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo</a></b> ed effettuare una nuova assegnazione per la valutazione della domanda ad altri referee.
   	</p>
     <p>
       Distinti Saluti, <br />
