--- a/src/main/resources/mails/convocazioneValutazioneSulCampo.html
+++ b/src/main/resources/mails/convocazioneValutazioneSulCampo.html
@@ -7,7 +7,7 @@
   <body>
   	<p>Gentile Componente della Commissione ECM,</p>
   	<p>
-	  	&Egrave; stata fissata una valutazione sul campo in data <span th:text="${data == null} ? '' : ${#temporals.format(data, 'dd/MM/yyyy')}"></span> per il Provider <span th:text="${provider}"></span><br/>
+	  	&Egrave; stata fissata una valutazione sul campo in data <span th:text="${data == null} ? '' : ${#temporals.format(data, 'dd/MM/yyyy - HH:mm')}"></span> per il Provider <span th:text="${provider}"></span><br/>
 	  	&Egrave; possibile collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per visualizzare i dettagli.
   	</p>
     <p>
