--- a/src/main/resources/mails/alertErroreDiSistema.html
+++ b/src/main/resources/mails/alertErroreDiSistema.html
@@ -12,7 +12,7 @@
   	</p>
   	<p>Si consiglia di segnalare il problema al fornitore per l'analisi dei log.</p>
     <p>
-      Distinti Saluti<br />
+      Cordiali saluti<br />
     </p>
   </body>
 </html>
