--- a/src/main/resources/mails/alertScadenzaAccreditamento.html
+++ b/src/main/resources/mails/alertScadenzaAccreditamento.html
@@ -7,11 +7,12 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che mancano 90 giorni alla scadenza del suo Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span>.
+     La informiamo che si sta avvicinando il termine di scadenza dello stato di accreditamento <span th:text="${isStandard} ? 'standard' : 'provvisorio'"></span>.<br />
+     La scrivente struttura provveder&agrave; a breve ad abilitarla alla presentazione della domanda di accreditamento standard.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
