--- a/src/main/resources/mails/alertScadenzaInvioAccreditamentoStandard.html
+++ b/src/main/resources/mails/alertScadenzaInvioAccreditamentoStandard.html
@@ -7,11 +7,11 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini per procedere alla presentazione della domanda di Accreditamento come Provider ECM Standard per la Regione del Veneto.
+     La informiamo che tra 15 giorni scadranno i termini per procedere alla presentazione della domanda di accreditamento come Provider ECM standard per la Regione del Veneto.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
