--- a/src/main/resources/mails/alertScadenzaPFA.html
+++ b/src/main/resources/mails/alertScadenzaPFA.html
@@ -7,11 +7,11 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini per procedere all'inserimento del Piano Formativo Annuale. Il mancato inserimento del Piano Formativo Annuale non permetter&agrave; di accreditare eventi provenienti dal Piano Formativo per l'anno prossimo.
+     La informiamo che tra 15 giorni scadranno i termini per procedere all'inserimento del Piano Formativo Annuale fissati per il 31 dicembre corrente anno. Il mancato inserimento dello stesso non permetter&agrave; di accreditare eventi inseriti nel Piano Formativo per l'anno prossimo.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
