--- a/src/main/resources/mails/alertScadenzaPagamentoRendicontazioneEvento.html
+++ b/src/main/resources/mails/alertScadenzaPagamentoRendicontazioneEvento.html
@@ -7,11 +7,11 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini  per procedere al pagamento e alla rendicontazione dell'evento <span th:text="${eventoIdentificativo}"></span> con titolo <span th:text="${eventoTitolo}"></span>
+     La informiamo tra 15 giorni scadranno i termini  per procedere al pagamento e alla rendicontazione dell'evento <span th:text="${eventoIdentificativo}"></span> con titolo <span th:text="${eventoTitolo}"></span>
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
