--- a/src/main/resources/mails/alertScadenzaReinvioIntegrazioniAccreditamento.html
+++ b/src/main/resources/mails/alertScadenzaReinvioIntegrazioniAccreditamento.html
@@ -10,8 +10,8 @@
      La informiamo che sono in scadenza i termini per procedere all'invio delle integrazioni<span th:if="${isPreavvisoDiRigetto}"> relative al preavviso di rigetto</span> richieste sulla domanda di Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span>. Una volta scaduti i termini, non sar&agrave; possibile procedere con la modifica dei dati/documenti.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
