--- a/src/main/resources/mails/alertScadenzaRelazioneAnnuale.html
+++ b/src/main/resources/mails/alertScadenzaRelazioneAnnuale.html
@@ -7,11 +7,11 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 15 giorni i termini per procedere all'inserimento della Relazione Annuale.
+     La informiamo che tra 15 giorni scadranno i termini per procedere all'inserimento della Relazione Annuale fissati per il 31 marzo corrente anno.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
