--- a/src/main/resources/mails/assegnaDomandaReferee.html
+++ b/src/main/resources/mails/assegnaDomandaReferee.html
@@ -11,8 +11,8 @@
 	  	&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda entro il termine di 15 giorni.
   	</p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
