--- a/src/main/resources/mails/convocazioneCommissione.html
+++ b/src/main/resources/mails/convocazioneCommissione.html
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Componente della Commissione ECM,</p>
+  	<p>Gentile Componente Commissione Regionale  ECM,</p>
   	<p>
-	  	&Egrave; stata fissata una seduta per la valutazione di domande di accreditamento Provvisorio dei Provider.<br/>
+	  	&Egrave; stata fissata una seduta per la valutazione delle domande di accreditamento Provvisorio dei Provider.<br/>
 	  	&Egrave; possibile collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per visualizzare le domande che saranno discusse nella prossima seduta.
   	</p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
