--- a/src/main/resources/mails/convocazioneValutazioneSulCampo.html
+++ b/src/main/resources/mails/convocazioneValutazioneSulCampo.html
@@ -11,8 +11,8 @@
 	  	&Egrave; possibile collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per visualizzare i dettagli.
   	</p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
     <!--
     <footer>
