--- a/src/main/resources/mails/creazioneAccount.html
+++ b/src/main/resources/mails/creazioneAccount.html
@@ -13,8 +13,8 @@
     <p>username: <span th:text="${username}"></span><br />
    	   password: <span th:text="${password}"></span></p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
