--- a/src/main/resources/mails/notificaSegreteriaMancataValutazioneReferee.html
+++ b/src/main/resources/mails/notificaSegreteriaMancataValutazioneReferee.html
@@ -5,13 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Segreteria ECM,</p>
+  	<p>Gentilissimi,</p>
   	<p>
 	  	Nella domanda del Provider <span th:text="${provider}"></span> sono scaduti i termini per la presentazione di almeno 2 valutazioni su 3 da parte dei Referee a cui la domanda &egrave; stata assegnata.<br/>
 		&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo</a></b> ed effettuare una nuova assegnazione per la valutazione della domanda ad altri referee.
   	</p>
     <p>
-      Distinti Saluti, <br />
+      Cordiali saluti, <br />
     </p>
   </body>
 </html>
