--- a/src/main/resources/mails/nuovaComunicazioneForProvider.html
+++ b/src/main/resources/mails/nuovaComunicazioneForProvider.html
@@ -13,8 +13,8 @@
     	Per visualizzarla &egrave; necessario collegarsi all'applicativo.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
