--- a/src/main/resources/mails/alertScadenzaContributoAnnuo.html
+++ b/src/main/resources/mails/alertScadenzaContributoAnnuo.html
@@ -7,11 +7,11 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo che scadranno fra 10 giorni i termini  per procedere al pagamento del contributo annuo. Il mancato pagamento del contributo non permetter&agrave; di accedere all'Albo dei Provider accreditati e di accedere alle funzionalit&agrave; di accreditamento degli eventi.
+     La informiamo che tra 10 giorni scadranno i termini  per procedere al pagamento del contributo annuo. Il mancato pagamento dello stesso non permetter&agrave; di accedere all'Albo dei Provider accreditati e alle funzionalit&agrave; di accreditamento degli eventi.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
