--- a/src/main/resources/mails/alertScadenzaValutazioneReferee.html
+++ b/src/main/resources/mails/alertScadenzaValutazioneReferee.html
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Referee ECM,</p>
+  	<p>Gentilissima/o,</p>
   	<p>
-	  	La informiamo che scadranno fra 5 giorni i termini per procedere con la valutazione della domanda del Provider <span th:text="${provider}"></span>.<br/>
-	  	&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della domanda.
+	  	La informiamo che tra 5 giorni scadranno i termini per procedere con la valutazione della domanda del Provider <span th:text="${provider}"></span>.<br/>
+	  	&Egrave; necessario collegarsi all' <b><a th:href="${applicationBaseUrl}">applicativo gestionale ECM</a></b> per procedere con la valutazione della stessa.
   	</p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
