--- a/src/main/resources/mails/confermaInvioIntegrazioni.html
+++ b/src/main/resources/mails/confermaInvioIntegrazioni.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <title th:remove="all">Corretto re-invio domanda di Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span> in stato <span th:text="${isPreavvisoDiRigetto} ? 'Preavviso di Rigetto' : 'Richiesta di Integrazioni'"></span> alla Segreteria ECM.</title>
+    <title th:remove="all">Corretto re-invio domanda di Accreditamento <span th:text="${isStandard} ? 'standard' : 'provvisorio'"></span> in stato <span th:text="${isPreavvisoDiRigetto} ? 'Preavviso di Rigetto' : 'Richiesta di Integrazioni'"></span> alla Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero.</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
     <p>Gentile Provider,</p>
     <p>
-     Le integrazioni richieste sulla domanda di Accreditamento <span th:text="${isStandard} ? 'Standard' : 'Provvisorio'"></span> presentata sono state correttamente inviate alla Segreteria ECM.
+     Le integrazioni richieste sulla domanda di Accreditamento <span th:text="${isStandard} ? 'standard' : 'provvisorio'"></span> presentata sono state correttamente inviate alla scrivente Struttura.
     </p>
     <p>
-      Distinti Saluti, <br />
-      <em>Segreteria ECM</em>
+      Cordiali saluti, <br />
+      <em>Area ECM<br />UOC Formazione e Sviluppo delle Professioni Sanitarie<br />Azienda Zero</em>
     </p>
   </body>
 </html>
