Finalizati e controllati contenuti e titoli

--- a/src/main/resources/mails/alertErroreDiSistema.html
+++ b/src/main/resources/mails/alertErroreDiSistema.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-  	<p>Gentile Segreteria ECM,</p>
+  	<p>Gentilissimi,</p>
   	<p>
 	  	Si &egrave; verificato un errore nel Sistema ECM.<br/>
 	  	<span th:text="${message}"></span>
