--- a/src/main/resources/mails/alertScadenzaPagamentoRendicontazioneEvento.html
+++ b/src/main/resources/mails/alertScadenzaPagamentoRendicontazioneEvento.html
@@ -7,7 +7,7 @@
   <body>
     <p>Gentile Provider,</p>
     <p>
-     La informiamo tra 15 giorni scadranno i termini  per procedere al pagamento e alla rendicontazione dell'evento <span th:text="${eventoIdentificativo}"></span> con titolo <span th:text="${eventoTitolo}"></span>
+     La informiamo che tra 15 giorni scadranno i termini  per procedere alla rendicontazione dell'evento <span th:text="${eventoIdentificativo}"></span> con titolo <span th:text="${eventoTitolo}"></span>
     </p>
     <p>
       Cordiali saluti, <br />
